@@ -1,4 +1,8 @@
 class KaleidoscopeCommand
+  attr_accessor :fails
+  attr_accessor :before_path
+  attr_accessor :after_path
+  
   def self.command_from_line(line)
     components = line.split("\"")
     if components.count > 4
